# internal/handler/health_check_handler.go
@@ -59,7 +59,7 @@ func NewHealthCheck(svc service.HealthCheck) HealthCheck {
 // @Tags health
 // @Produce json
 // @Success 200 {object} healthCheckResponse
-// @Router /v1/health-check [get]
+// @Router /health-check [get]
 func (h *healthCheckHandler) Check(c *gin.Context) {
 	message, serviceName, instanceID, err := h.svc.Check(c)
 	if err != nil {
